# rcs

./: .gitignore  bot.py  depends.py  docker-compose.yml  main.py  pyproject.toml  setup.cfg
CRUD/: bot.py  task.py
RCS/: client.py  rcs.py  schema.py  task.py
RCS/google/: client.py  schema.py
RCS/sinch/: client.py  schema.py
alembic/: env.py
alembic/versions/: 0a447c0cbd26_task_result.py  2117c45dc426_add_bot_table.py  310defd436bc_add_user.py  348c3fe6d30b_add_bot_table_2.py  351b882a5e14_add_user_table.py  502c766c20f3_init.py  629d886b8755_add_path_to_tasks_s_file.py  86c29616ab26_add_task_relationship_and_change_task_.py  9a6add22e514_add_task_relationship_and_change_task_.py  dbc18a0dc99c_init.py
api/v1/: router.py
api/v1/endpoints/: auth.py  bot.py  task.py
api/v2/: router.py
api/v2/endpoints/: bot.py
celery_app/: app.py
client/: client.py
config/: settings.py
core/: auth.py  config.py  database.py  redis_client.py
middleware/: authenticate.py
model/: bot.py  rcs.py  task.py  user.py
schema/: bot.py  task.py
schemas/: rcs.py
service/: auth.py
task/: rcs.py
utils/: excell.py
