[tool.poetry]
name = "rcs"
version = "0.1.0"
description = ""
authors = ["apolumestny <anpolumestny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.1"
celery = {extras = ["redis"], version = "^5.3.6"}
uvicorn = {extras = ["standart"], version = "^0.29.0"}
httpx = "^0.27.0"
google-auth = "^2.29.0"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
