[tool.poetry]
name = "rcs"
version = "0.1.0"
description = ""
authors = ["apolumestny <anpolumestny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.1"
celery = {extras = ["redis"], version = "^5.3.6"}
uvicorn = {extras = ["standart"], version = "^0.29.0"}
httpx = "^0.27.0"
google-auth = "^2.29.0"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = "^3.1.18"
aiofiles = "^23.2.1"
asyncpg = "^0.29.0"
redis = "^5.0.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"
aiohttp = "^3.9.5"


[tool.poetry.group.test.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-async = "^24.4.1"
flake8-clean-block = "^0.1.2"
flake8-fastapi = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
